[tool.poetry]
name = "Simple Diary App"
version = "1.0.0"
description = "Simple Diary App That Basically Writes Whatever The User Wrote Into A Text File."
authors = ["Nolen Avery"]

[tool.poetry.dependencies]
python = ">=3.8.0,<3.9"
numpy = "^1.22.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"